--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,7 @@ body {
 }
 
 header {
-  background: url(../images/space.jpg) center;
+  background: url(../images/stars.jpg) center;
   background-size: cover;
   min-height: 100vh;
 }
@@ -106,7 +106,6 @@ header nav .links a {
   color: #fff;
   text-decoration: none;
   letter-spacing: 2px;
-  display: inline-block;
 }
 
 header nav .links .link::after {
@@ -114,7 +113,7 @@ header nav .links .link::after {
   position: relative;
   display: block;
   width: 0;
-  height: 5px;
+  height: 4px;
   background: var(--red);
   -webkit-transition: width 0.3s ease;
   transition: width 0.3s ease;
@@ -199,7 +198,7 @@ header .hero h1 span {
 
 header .hero p {
   font-family: var(--raleway);
-  color: #aaaaaa;
+  color: #dbdbdb;
   line-height: 1.6;
   font-size: calc(14px + 0.5vw);
   text-align: center;
