--- a/css/main.scss
+++ b/css/main.scss
@@ -641,6 +641,9 @@ header {
       h2 {
         font-size: 1.5rem;
       }
+      p {
+        font-size: 0.7rem;
+      }
     }
   }
 
@@ -714,7 +717,7 @@ header {
           font-size: 1.8rem;
         }
         p {
-          font-size: 1rem;
+          font-size: 0.9rem;
           min-width: 70%;
         }
       }
