--- a/css/main.scss
+++ b/css/main.scss
@@ -490,27 +490,30 @@ header {
       }
     }
     .card1 {
-      background: url(../images/memory_cards.png) center;
+      background: url(../images/shopping_cart.png) center;
     }
     .card2 {
-      background: url(../images/cv.png) center;
+      background: url(../images/memory_cards.png) center;
     }
     .card3 {
-      background: url(../images/weather_app.png) center;
+      background: url(../images/cv.png) center;
     }
     .card4 {
-      background: url(../images/portfolio.png) center;
+      background: url(../images/weather_app.png) center;
     }
     .card5 {
-      background: url(../images/todo_list.png) center;
+      background: url(../images/portfolio.png) center;
     }
     .card6 {
-      background: url(../images/tic_tac_toe.png) center;
+      background: url(../images/todo_list.png) center;
     }
     .card7 {
-      background: url(../images/restaurant.png) center;
+      background: url(../images/tic_tac_toe.png) center;
     }
     .card8 {
+      background: url(../images/restaurant.png) center;
+    }
+    .card9 {
       background: url(../images/library.png) center;
     }
   }
